<resources>
    <string name="app_name">MR</string>
    <string name="bookkeeping">记账</string>
    <string name="income_and_expenditure">收支情况</string>
    <string name="add_income_type">添加收入类别</string>
    <string name="add_pay_type">添加支出类别</string>
    <string name="complete">完成</string>
    <string name="account">账户</string>
    <string name="date">日期</string>
    <string name="remark">备注</string>
    <string name="account_name">账户名称</string>
    <string name="account_balance">账户余额</string>
    <string name="input_acc_over">输入账户余额</string>
    <string name="input_acc_name">输入账户名称</string>
    <string name="account_type">账户类型</string>
    <string name="save">保存</string>
    <string name="add_account">添加账户</string>
    <string name="transfer">转账</string>
    <string name="choose_account">选择账户</string>
    <string name="cancel">取消</string>
</resources>