<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#EDEDED"
        android:layout_marginBottom="6dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="13sp"
            android:textColor="#333"
            android:gravity="center"
            android:text="@string/account" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#8C8C8C"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="13sp"
            android:textColor="#333"
            android:text="@string/date" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#8C8C8C"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="13sp"
            android:paddingStart="8dp"
            android:textColor="#333"
            android:textColorHint="#BDBDBD"
            android:background="@null"
            android:hint="@string/remark" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#EDEDED"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F1F1F1" />

</LinearLayout>